# Agentic-Ai-Smit-

Agentic Ai/Fast-Api/: main.py  pyproject.toml
Fast-Api/: main.py
university_registration/: main.py  models.py  pyproject.toml  routes.py
